Заменил ul на див в хедере
Как сделать чтобы блок растягивался на всю ширину родителя? flex: 1;
flex-wrap: nowrap для ссылок?!
Добавить маргин справа для ссылок?

--- a/Техномарт/index.html
+++ b/Техномарт/index.html
@@ -20,11 +20,11 @@
             <input type="search" name="question" placeholder="Поиск">
             <input class="visually-hidden" type="submit" value="Найти">
           </form>
-          <ul class="button-list">
-            <li class="button-item button-item1"><a href="#">Закладки: 0</a></li>
-            <li class="button-item button-item2"><a href="#">Корзина: 0</a></li>
-            <li class="button-item button-item3"><a href="#">Оформить заказ</a></li>
-          </ul>
+          <div class="header-buttons">
+            <a class="bookmarks" href="#">Закладки: 0</a>
+            <a class="basket" href="#">Корзина: 0</a>
+            <a class="ordering" href="#">Оформить заказ</a>
+          </div>
         </section>
       </div>
     </div>  
