--- a/index.html
+++ b/index.html
@@ -29,25 +29,29 @@
 				<a class="bookmarks" href="#">Закладки: 0</a>
 				<svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16"><path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>
 
-			</li>
+			      </li>
             <li class="menu-item">
 				<a class="basket" href="#">Корзина: 0</a>
-				<svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16"><path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5"/><circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5"/><path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>
 
-			</li>
+		      	</li>
             <li class="menu-item">
-				<a class="ordering" href="#">Оформить заказ</a
-			</li>
+			      	<a class="ordering" href="#">Оформить заказ</a>
+            </li>
           </ul>
         </section>
       </div>
     </div>  
+    
+    
     <div class="container">
       <section class="about">
-        <h2>Интернет-магазин строительных материалов и инструментов для ремонта</h2>
-        <!-- Логотип трубки перед номером, добавить -->
-        <a href="tel:+78125550555">+7 (812) 555-05-05</a>
-        <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <h2 class="visually-hidden">Техномарт</h2>
+        <p class="description">Интернет-магазин строительных материалов </br> и инструментов для ремонта</p>
+        <div class="contacts">
+          <a  clase="phone" href="tel:+78125550555">+7 (812) 555-05-05</a>
+          <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
         <ul class="user-link-list">
           <li class="user-link-item"><a href="#">Войти</a></li>
           <li class="user-link-item"><a href="#">Регистрация</a></li>
