Начал делать слайдер
Сделать смену слайдов, ссылку заголовок и абзац в контейнере слайда

--- a/index.html
+++ b/index.html
@@ -121,17 +121,25 @@
         <div class="promo-other-container">
          
 		 <div class="slider-wrapper">
-            <input class="visually-hidden" type="radio" name="point" id="slide-1" checked>
-			<input class="visually-hidden" type="radio" name="point" id="slide-1">
+      <input type="radio" name="point" id="slide1" checked>
+			<input type="radio" name="point" id="slide2">
 			<div class="slider">
 				<div class="slides slide1"></div>
 				<div class="slides slide2"></div>
 			</div>	
-			<div class="controls">
+			<div class="slider-controls">
 				<label for="slide1"></label>
 				<label for="slide2"></label>
 			</div>
-          </div>
+      <div class="slider-right-left-buttons">
+        <label for="slide1">
+          <span class="visually-hidden">Влево</span>
+        </label>
+        <label for="slide2">
+          <span class="visually-hidden">Право</span>
+        </label>
+      </div>
+     </div>
 		  
           <ul class="promo-other-list">  
             <li class="promo-item sales">
