--- a/index.html
+++ b/index.html
@@ -162,82 +162,94 @@
     </section>
 
     <section class="popular-goods">
-      <h2>Популярные товары:</h2>
-      <a class="button" href="#">Все популярные товары</a>
+		<div class="heading">
+		  <h2>Популярные товары:</h2>
+		  <a class="button" href="#">Все популярные товары</a>
+		</div>
       <ul class="popular-goods-list">
 
         <li class="popular-goods-item">
-          <img src="#" alt="Перфоратор Bosch BFG 9000">
-          <p>Перфоратор Bosch BFG 9000</p>
+		  <div class="popular-goods-image">
+			<img src="img/bfg9000.jpg" width="184" height="164" alt="Перфоратор Bosch BFG 9000">
+		  </div>
+          <a class="title" href="#">Перфоратор Bosch BFG 9000</a>
           <span class="old-price">32500 Р.</span>
           <span class="new-price">25500 Р.</span>
         </li>
 
         <li class="popular-goods-item">
-          <img src="#" alt="Перфоратор Bosch BFG 3000">
-          <p>Перфоратор Bosch BFG 3000</p>
+		  <div class="popular-goods-image">	
+			<img src="img/bfg3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
+		  </div>	
+          <a class="title" href="#">Перфоратор Bosch BFG 3000</a>
           <span class="old-price">22500 Р.</span>
           <span class="new-price">15500 Р.</span>
         </li>
 
         <li class="popular-goods-item">
-          <img src="#" alt="Перфоратор Bosch BFG 6000">
-          <p>Перфоратор Bosch BFG 6000</p>
+		  <div class="popular-goods-image">	
+			<img src="img/bfg6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
+		  </div>	
+          <a class="title" href="#">Перфоратор Bosch BFG 6000</a>
           <span class="old-price">30500 Р.</span>
           <span class="new-price">25500 Р.</span>
         </li>
 
         <li class="popular-goods-item">
-          <img src="#" alt="Перфоратор Bosch BFG 2000">
-          <p>Перфоратор Bosch BFG 2000</p>
-          <span class="old-price"></span>
+		  <div class="popular-goods-image">	
+            <img src="img/bfg2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
+		  </div>	
+          <a class="title" href="#">Перфоратор Bosch BFG 2000</a>
+          <span class="old-price"> </span>
           <span class="new-price">12500 Р.</span>
         </li>
       </ul>
     </section>
 
     <section class="popular-makers">
-      <h2>Популярные производители:</h2>
-      <a class="button" href="#">Все производители</a>
+	  <div class="heading">
+		  <h2>Популярные производители:</h2>
+		  <a class="button" href="#">Все производители</a>
+	  </div>
       <ul class="popular-makers-list">
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="Bosch">
+            <img src="img/bosch.png" alt="Bosch" width="126" height="37">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="Makita">
+            <img src="img/makita.png" alt="Makita" width="123" height="40">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="DeWalt">
+            <img src="img/dewalt.png" alt="DeWalt" width="146" height="44">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="Интерскол">
+            <img src="img/интерскол.png" alt="Интерскол" width="200" height="88">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="Hitachi">
+            <img src="img/hitachi.png" alt="Hitachi" width="169" height="31">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="LG">
+            <img src="img/lg.png" alt="LG" width="121" height="73">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="AEG">
+            <img src="img/aeg.png" alt="AEG" width="151" height="96">
           </a>
         </li>
         <li class="popular-makers-item">
           <a href="#">
-            <img src="" alt="metabo">
+            <img src="img/metabo.png" alt="metabo" width="204" height="69">
           </a>
         </li>
       </ul>
@@ -245,8 +257,8 @@
 
     <section class="services">
       <h2 class="services-title">Сервисы</h2>
-      <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
-      <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      <p class="services-intro">Хороший интернет-магазин отличается от плохого не только ценами!<br>
+         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       <ul class="services-list">
         <li class="services-item active">
           <a href="1">Доставка</a>
